parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    QUOTE

Grammar

Rule 0     S' -> start
Rule 1     start -> bloc
Rule 2     bloc -> bloc statement SEMICOLON
Rule 3     bloc -> statement SEMICOLON
Rule 4     out -> return
Rule 5     out -> bloc
Rule 6     return -> RETURN SEMICOLON
Rule 7     return -> RETURN expression SEMICOLON
Rule 8     statement -> PRINT LPAREN expression RPAREN
Rule 9     statement -> PRINT LPAREN expression COMMA expression RPAREN
Rule 10    statement -> IF LPAREN expression RPAREN LBRACE bloc RBRACE
Rule 11    statement -> IF LPAREN expression RPAREN LBRACE bloc RBRACE ELSE LBRACE bloc RBRACE
Rule 12    statement -> WHILE LPAREN expression RPAREN LBRACE bloc RBRACE
Rule 13    list -> NAME COMMA NAME
Rule 14    list -> list COMMA NAME
Rule 15    statement -> NAME LPAREN RPAREN
Rule 16    statement -> FONCVOID NAME LPAREN RPAREN LBRACE bloc RBRACE
Rule 17    statement -> FOR LPAREN NAME EQUAL expression SEMICOLON statement SEMICOLON NAME EQUAL expression PLUS expression SEMICOLON RPAREN LBRACE bloc RBRACE
Rule 18    statement -> FOR LPAREN NAME EQUAL expression SEMICOLON statement SEMICOLON NAME EQUAL expression MINUS expression SEMICOLON RPAREN LBRACE bloc RBRACE
Rule 19    statement -> NAME EQUAL expression
Rule 20    statement -> NAME EQUAL STRING
Rule 21    statement -> NAME LBRACKET expression RBRACKET EQUAL expression
Rule 22    statement -> NAME LBRACKET expression RBRACKET
Rule 23    expression -> NAME
Rule 24    statement -> expression
Rule 25    expression -> NAME PLUSEQ expression
Rule 26    expression -> NAME PLUSPLUS
Rule 27    expression -> expression PLUS expression
Rule 28    expression -> expression MINUS expression
Rule 29    expression -> expression TIMES expression
Rule 30    expression -> expression OR expression
Rule 31    expression -> expression EQEQ expression
Rule 32    expression -> expression DIF expression
Rule 33    expression -> expression LESSEQ expression
Rule 34    expression -> expression GREATEQ expression
Rule 35    expression -> expression AND expression
Rule 36    expression -> expression EQUAL expression
Rule 37    expression -> expression LESSTHAN expression
Rule 38    expression -> expression BIGGERTHAN expression
Rule 39    expression -> expression MODULO expression
Rule 40    expression -> expression DIVIDE expression
Rule 41    expression -> LPAREN expression RPAREN
Rule 42    expression -> NUMBER
Rule 43    expression -> TRUE
Rule 44    expression -> FALSE

Terminals, with rules where they appear

AND                  : 35
BIGGERTHAN           : 38
COMMA                : 9 13 14
DIF                  : 32
DIVIDE               : 40
ELSE                 : 11
EQEQ                 : 31
EQUAL                : 17 17 18 18 19 20 21 36
FALSE                : 44
FONCVOID             : 16
FOR                  : 17 18
GREATEQ              : 34
IF                   : 10 11
LBRACE               : 10 11 11 12 16 17 18
LBRACKET             : 21 22
LESSEQ               : 33
LESSTHAN             : 37
LPAREN               : 8 9 10 11 12 15 16 17 18 41
MINUS                : 18 28
MODULO               : 39
NAME                 : 13 13 14 15 16 17 17 18 18 19 20 21 22 23 25 26
NUMBER               : 42
OR                   : 30
PLUS                 : 17 27
PLUSEQ               : 25
PLUSPLUS             : 26
PRINT                : 8 9
QUOTE                : 
RBRACE               : 10 11 11 12 16 17 18
RBRACKET             : 21 22
RETURN               : 6 7
RPAREN               : 8 9 10 11 12 15 16 17 18 41
SEMICOLON            : 2 3 6 7 17 17 17 18 18 18
STRING               : 20
TIMES                : 29
TRUE                 : 43
WHILE                : 12
error                : 

Nonterminals, with rules where they appear

bloc                 : 1 2 5 10 11 11 12 16 17 18
expression           : 7 8 9 9 10 11 12 17 17 17 18 18 18 19 21 21 22 24 25 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41
list                 : 14
out                  : 
return               : 4
start                : 0
statement            : 2 3 17 18

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . bloc
    (2) bloc -> . bloc statement SEMICOLON
    (3) bloc -> . statement SEMICOLON
    (8) statement -> . PRINT LPAREN expression RPAREN
    (9) statement -> . PRINT LPAREN expression COMMA expression RPAREN
    (10) statement -> . IF LPAREN expression RPAREN LBRACE bloc RBRACE
    (11) statement -> . IF LPAREN expression RPAREN LBRACE bloc RBRACE ELSE LBRACE bloc RBRACE
    (12) statement -> . WHILE LPAREN expression RPAREN LBRACE bloc RBRACE
    (15) statement -> . NAME LPAREN RPAREN
    (16) statement -> . FONCVOID NAME LPAREN RPAREN LBRACE bloc RBRACE
    (17) statement -> . FOR LPAREN NAME EQUAL expression SEMICOLON statement SEMICOLON NAME EQUAL expression PLUS expression SEMICOLON RPAREN LBRACE bloc RBRACE
    (18) statement -> . FOR LPAREN NAME EQUAL expression SEMICOLON statement SEMICOLON NAME EQUAL expression MINUS expression SEMICOLON RPAREN LBRACE bloc RBRACE
    (19) statement -> . NAME EQUAL expression
    (20) statement -> . NAME EQUAL STRING
    (21) statement -> . NAME LBRACKET expression RBRACKET EQUAL expression
    (22) statement -> . NAME LBRACKET expression RBRACKET
    (24) statement -> . expression
    (23) expression -> . NAME
    (25) expression -> . NAME PLUSEQ expression
    (26) expression -> . NAME PLUSPLUS
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression EQEQ expression
    (32) expression -> . expression DIF expression
    (33) expression -> . expression LESSEQ expression
    (34) expression -> . expression GREATEQ expression
    (35) expression -> . expression AND expression
    (36) expression -> . expression EQUAL expression
    (37) expression -> . expression LESSTHAN expression
    (38) expression -> . expression BIGGERTHAN expression
    (39) expression -> . expression MODULO expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . TRUE
    (44) expression -> . FALSE

    PRINT           shift and go to state 4
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    NAME            shift and go to state 9
    FONCVOID        shift and go to state 10
    FOR             shift and go to state 11
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14

    start                          shift and go to state 1
    bloc                           shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 6

state 1

    (0) S' -> start .



state 2

    (1) start -> bloc .
    (2) bloc -> bloc . statement SEMICOLON
    (8) statement -> . PRINT LPAREN expression RPAREN
    (9) statement -> . PRINT LPAREN expression COMMA expression RPAREN
    (10) statement -> . IF LPAREN expression RPAREN LBRACE bloc RBRACE
    (11) statement -> . IF LPAREN expression RPAREN LBRACE bloc RBRACE ELSE LBRACE bloc RBRACE
    (12) statement -> . WHILE LPAREN expression RPAREN LBRACE bloc RBRACE
    (15) statement -> . NAME LPAREN RPAREN
    (16) statement -> . FONCVOID NAME LPAREN RPAREN LBRACE bloc RBRACE
    (17) statement -> . FOR LPAREN NAME EQUAL expression SEMICOLON statement SEMICOLON NAME EQUAL expression PLUS expression SEMICOLON RPAREN LBRACE bloc RBRACE
    (18) statement -> . FOR LPAREN NAME EQUAL expression SEMICOLON statement SEMICOLON NAME EQUAL expression MINUS expression SEMICOLON RPAREN LBRACE bloc RBRACE
    (19) statement -> . NAME EQUAL expression
    (20) statement -> . NAME EQUAL STRING
    (21) statement -> . NAME LBRACKET expression RBRACKET EQUAL expression
    (22) statement -> . NAME LBRACKET expression RBRACKET
    (24) statement -> . expression
    (23) expression -> . NAME
    (25) expression -> . NAME PLUSEQ expression
    (26) expression -> . NAME PLUSPLUS
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression EQEQ expression
    (32) expression -> . expression DIF expression
    (33) expression -> . expression LESSEQ expression
    (34) expression -> . expression GREATEQ expression
    (35) expression -> . expression AND expression
    (36) expression -> . expression EQUAL expression
    (37) expression -> . expression LESSTHAN expression
    (38) expression -> . expression BIGGERTHAN expression
    (39) expression -> . expression MODULO expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . TRUE
    (44) expression -> . FALSE

    $end            reduce using rule 1 (start -> bloc .)
    PRINT           shift and go to state 4
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    NAME            shift and go to state 9
    FONCVOID        shift and go to state 10
    FOR             shift and go to state 11
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14

    statement                      shift and go to state 15
    expression                     shift and go to state 6

state 3

    (3) bloc -> statement . SEMICOLON

    SEMICOLON       shift and go to state 16


state 4

    (8) statement -> PRINT . LPAREN expression RPAREN
    (9) statement -> PRINT . LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 17


state 5

    (41) expression -> LPAREN . expression RPAREN
    (23) expression -> . NAME
    (25) expression -> . NAME PLUSEQ expression
    (26) expression -> . NAME PLUSPLUS
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression EQEQ expression
    (32) expression -> . expression DIF expression
    (33) expression -> . expression LESSEQ expression
    (34) expression -> . expression GREATEQ expression
    (35) expression -> . expression AND expression
    (36) expression -> . expression EQUAL expression
    (37) expression -> . expression LESSTHAN expression
    (38) expression -> . expression BIGGERTHAN expression
    (39) expression -> . expression MODULO expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . TRUE
    (44) expression -> . FALSE

    NAME            shift and go to state 19
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14

    expression                     shift and go to state 18

state 6

    (24) statement -> expression .
    (27) expression -> expression . PLUS expression
    (28) expression -> expression . MINUS expression
    (29) expression -> expression . TIMES expression
    (30) expression -> expression . OR expression
    (31) expression -> expression . EQEQ expression
    (32) expression -> expression . DIF expression
    (33) expression -> expression . LESSEQ expression
    (34) expression -> expression . GREATEQ expression
    (35) expression -> expression . AND expression
    (36) expression -> expression . EQUAL expression
    (37) expression -> expression . LESSTHAN expression
    (38) expression -> expression . BIGGERTHAN expression
    (39) expression -> expression . MODULO expression
    (40) expression -> expression . DIVIDE expression

    SEMICOLON       reduce using rule 24 (statement -> expression .)
    PLUS            shift and go to state 20
    MINUS           shift and go to state 21
    TIMES           shift and go to state 22
    OR              shift and go to state 23
    EQEQ            shift and go to state 24
    DIF             shift and go to state 25
    LESSEQ          shift and go to state 26
    GREATEQ         shift and go to state 27
    AND             shift and go to state 28
    EQUAL           shift and go to state 29
    LESSTHAN        shift and go to state 30
    BIGGERTHAN      shift and go to state 31
    MODULO          shift and go to state 32
    DIVIDE          shift and go to state 33


state 7

    (10) statement -> IF . LPAREN expression RPAREN LBRACE bloc RBRACE
    (11) statement -> IF . LPAREN expression RPAREN LBRACE bloc RBRACE ELSE LBRACE bloc RBRACE

    LPAREN          shift and go to state 34


state 8

    (12) statement -> WHILE . LPAREN expression RPAREN LBRACE bloc RBRACE

    LPAREN          shift and go to state 35


state 9

    (15) statement -> NAME . LPAREN RPAREN
    (19) statement -> NAME . EQUAL expression
    (20) statement -> NAME . EQUAL STRING
    (21) statement -> NAME . LBRACKET expression RBRACKET EQUAL expression
    (22) statement -> NAME . LBRACKET expression RBRACKET
    (23) expression -> NAME .
    (25) expression -> NAME . PLUSEQ expression
    (26) expression -> NAME . PLUSPLUS

  ! shift/reduce conflict for EQUAL resolved as shift
    LPAREN          shift and go to state 36
    EQUAL           shift and go to state 37
    LBRACKET        shift and go to state 38
    PLUS            reduce using rule 23 (expression -> NAME .)
    MINUS           reduce using rule 23 (expression -> NAME .)
    TIMES           reduce using rule 23 (expression -> NAME .)
    OR              reduce using rule 23 (expression -> NAME .)
    EQEQ            reduce using rule 23 (expression -> NAME .)
    DIF             reduce using rule 23 (expression -> NAME .)
    LESSEQ          reduce using rule 23 (expression -> NAME .)
    GREATEQ         reduce using rule 23 (expression -> NAME .)
    AND             reduce using rule 23 (expression -> NAME .)
    LESSTHAN        reduce using rule 23 (expression -> NAME .)
    BIGGERTHAN      reduce using rule 23 (expression -> NAME .)
    MODULO          reduce using rule 23 (expression -> NAME .)
    DIVIDE          reduce using rule 23 (expression -> NAME .)
    SEMICOLON       reduce using rule 23 (expression -> NAME .)
    PLUSEQ          shift and go to state 39
    PLUSPLUS        shift and go to state 40

  ! EQUAL           [ reduce using rule 23 (expression -> NAME .) ]


state 10

    (16) statement -> FONCVOID . NAME LPAREN RPAREN LBRACE bloc RBRACE

    NAME            shift and go to state 41


state 11

    (17) statement -> FOR . LPAREN NAME EQUAL expression SEMICOLON statement SEMICOLON NAME EQUAL expression PLUS expression SEMICOLON RPAREN LBRACE bloc RBRACE
    (18) statement -> FOR . LPAREN NAME EQUAL expression SEMICOLON statement SEMICOLON NAME EQUAL expression MINUS expression SEMICOLON RPAREN LBRACE bloc RBRACE

    LPAREN          shift and go to state 42


state 12

    (42) expression -> NUMBER .

    PLUS            reduce using rule 42 (expression -> NUMBER .)
    MINUS           reduce using rule 42 (expression -> NUMBER .)
    TIMES           reduce using rule 42 (expression -> NUMBER .)
    OR              reduce using rule 42 (expression -> NUMBER .)
    EQEQ            reduce using rule 42 (expression -> NUMBER .)
    DIF             reduce using rule 42 (expression -> NUMBER .)
    LESSEQ          reduce using rule 42 (expression -> NUMBER .)
    GREATEQ         reduce using rule 42 (expression -> NUMBER .)
    AND             reduce using rule 42 (expression -> NUMBER .)
    EQUAL           reduce using rule 42 (expression -> NUMBER .)
    LESSTHAN        reduce using rule 42 (expression -> NUMBER .)
    BIGGERTHAN      reduce using rule 42 (expression -> NUMBER .)
    MODULO          reduce using rule 42 (expression -> NUMBER .)
    DIVIDE          reduce using rule 42 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 42 (expression -> NUMBER .)
    RPAREN          reduce using rule 42 (expression -> NUMBER .)
    COMMA           reduce using rule 42 (expression -> NUMBER .)
    RBRACKET        reduce using rule 42 (expression -> NUMBER .)


state 13

    (43) expression -> TRUE .

    PLUS            reduce using rule 43 (expression -> TRUE .)
    MINUS           reduce using rule 43 (expression -> TRUE .)
    TIMES           reduce using rule 43 (expression -> TRUE .)
    OR              reduce using rule 43 (expression -> TRUE .)
    EQEQ            reduce using rule 43 (expression -> TRUE .)
    DIF             reduce using rule 43 (expression -> TRUE .)
    LESSEQ          reduce using rule 43 (expression -> TRUE .)
    GREATEQ         reduce using rule 43 (expression -> TRUE .)
    AND             reduce using rule 43 (expression -> TRUE .)
    EQUAL           reduce using rule 43 (expression -> TRUE .)
    LESSTHAN        reduce using rule 43 (expression -> TRUE .)
    BIGGERTHAN      reduce using rule 43 (expression -> TRUE .)
    MODULO          reduce using rule 43 (expression -> TRUE .)
    DIVIDE          reduce using rule 43 (expression -> TRUE .)
    SEMICOLON       reduce using rule 43 (expression -> TRUE .)
    RPAREN          reduce using rule 43 (expression -> TRUE .)
    COMMA           reduce using rule 43 (expression -> TRUE .)
    RBRACKET        reduce using rule 43 (expression -> TRUE .)


state 14

    (44) expression -> FALSE .

    PLUS            reduce using rule 44 (expression -> FALSE .)
    MINUS           reduce using rule 44 (expression -> FALSE .)
    TIMES           reduce using rule 44 (expression -> FALSE .)
    OR              reduce using rule 44 (expression -> FALSE .)
    EQEQ            reduce using rule 44 (expression -> FALSE .)
    DIF             reduce using rule 44 (expression -> FALSE .)
    LESSEQ          reduce using rule 44 (expression -> FALSE .)
    GREATEQ         reduce using rule 44 (expression -> FALSE .)
    AND             reduce using rule 44 (expression -> FALSE .)
    EQUAL           reduce using rule 44 (expression -> FALSE .)
    LESSTHAN        reduce using rule 44 (expression -> FALSE .)
    BIGGERTHAN      reduce using rule 44 (expression -> FALSE .)
    MODULO          reduce using rule 44 (expression -> FALSE .)
    DIVIDE          reduce using rule 44 (expression -> FALSE .)
    SEMICOLON       reduce using rule 44 (expression -> FALSE .)
    RPAREN          reduce using rule 44 (expression -> FALSE .)
    COMMA           reduce using rule 44 (expression -> FALSE .)
    RBRACKET        reduce using rule 44 (expression -> FALSE .)


state 15

    (2) bloc -> bloc statement . SEMICOLON

    SEMICOLON       shift and go to state 43


state 16

    (3) bloc -> statement SEMICOLON .

    PRINT           reduce using rule 3 (bloc -> statement SEMICOLON .)
    IF              reduce using rule 3 (bloc -> statement SEMICOLON .)
    WHILE           reduce using rule 3 (bloc -> statement SEMICOLON .)
    NAME            reduce using rule 3 (bloc -> statement SEMICOLON .)
    FONCVOID        reduce using rule 3 (bloc -> statement SEMICOLON .)
    FOR             reduce using rule 3 (bloc -> statement SEMICOLON .)
    LPAREN          reduce using rule 3 (bloc -> statement SEMICOLON .)
    NUMBER          reduce using rule 3 (bloc -> statement SEMICOLON .)
    TRUE            reduce using rule 3 (bloc -> statement SEMICOLON .)
    FALSE           reduce using rule 3 (bloc -> statement SEMICOLON .)
    $end            reduce using rule 3 (bloc -> statement SEMICOLON .)
    RBRACE          reduce using rule 3 (bloc -> statement SEMICOLON .)


state 17

    (8) statement -> PRINT LPAREN . expression RPAREN
    (9) statement -> PRINT LPAREN . expression COMMA expression RPAREN
    (23) expression -> . NAME
    (25) expression -> . NAME PLUSEQ expression
    (26) expression -> . NAME PLUSPLUS
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression EQEQ expression
    (32) expression -> . expression DIF expression
    (33) expression -> . expression LESSEQ expression
    (34) expression -> . expression GREATEQ expression
    (35) expression -> . expression AND expression
    (36) expression -> . expression EQUAL expression
    (37) expression -> . expression LESSTHAN expression
    (38) expression -> . expression BIGGERTHAN expression
    (39) expression -> . expression MODULO expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . TRUE
    (44) expression -> . FALSE

    NAME            shift and go to state 19
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14

    expression                     shift and go to state 44

state 18

    (41) expression -> LPAREN expression . RPAREN
    (27) expression -> expression . PLUS expression
    (28) expression -> expression . MINUS expression
    (29) expression -> expression . TIMES expression
    (30) expression -> expression . OR expression
    (31) expression -> expression . EQEQ expression
    (32) expression -> expression . DIF expression
    (33) expression -> expression . LESSEQ expression
    (34) expression -> expression . GREATEQ expression
    (35) expression -> expression . AND expression
    (36) expression -> expression . EQUAL expression
    (37) expression -> expression . LESSTHAN expression
    (38) expression -> expression . BIGGERTHAN expression
    (39) expression -> expression . MODULO expression
    (40) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 45
    PLUS            shift and go to state 20
    MINUS           shift and go to state 21
    TIMES           shift and go to state 22
    OR              shift and go to state 23
    EQEQ            shift and go to state 24
    DIF             shift and go to state 25
    LESSEQ          shift and go to state 26
    GREATEQ         shift and go to state 27
    AND             shift and go to state 28
    EQUAL           shift and go to state 29
    LESSTHAN        shift and go to state 30
    BIGGERTHAN      shift and go to state 31
    MODULO          shift and go to state 32
    DIVIDE          shift and go to state 33


state 19

    (23) expression -> NAME .
    (25) expression -> NAME . PLUSEQ expression
    (26) expression -> NAME . PLUSPLUS

    RPAREN          reduce using rule 23 (expression -> NAME .)
    PLUS            reduce using rule 23 (expression -> NAME .)
    MINUS           reduce using rule 23 (expression -> NAME .)
    TIMES           reduce using rule 23 (expression -> NAME .)
    OR              reduce using rule 23 (expression -> NAME .)
    EQEQ            reduce using rule 23 (expression -> NAME .)
    DIF             reduce using rule 23 (expression -> NAME .)
    LESSEQ          reduce using rule 23 (expression -> NAME .)
    GREATEQ         reduce using rule 23 (expression -> NAME .)
    AND             reduce using rule 23 (expression -> NAME .)
    EQUAL           reduce using rule 23 (expression -> NAME .)
    LESSTHAN        reduce using rule 23 (expression -> NAME .)
    BIGGERTHAN      reduce using rule 23 (expression -> NAME .)
    MODULO          reduce using rule 23 (expression -> NAME .)
    DIVIDE          reduce using rule 23 (expression -> NAME .)
    COMMA           reduce using rule 23 (expression -> NAME .)
    SEMICOLON       reduce using rule 23 (expression -> NAME .)
    RBRACKET        reduce using rule 23 (expression -> NAME .)
    PLUSEQ          shift and go to state 39
    PLUSPLUS        shift and go to state 40


state 20

    (27) expression -> expression PLUS . expression
    (23) expression -> . NAME
    (25) expression -> . NAME PLUSEQ expression
    (26) expression -> . NAME PLUSPLUS
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression EQEQ expression
    (32) expression -> . expression DIF expression
    (33) expression -> . expression LESSEQ expression
    (34) expression -> . expression GREATEQ expression
    (35) expression -> . expression AND expression
    (36) expression -> . expression EQUAL expression
    (37) expression -> . expression LESSTHAN expression
    (38) expression -> . expression BIGGERTHAN expression
    (39) expression -> . expression MODULO expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . TRUE
    (44) expression -> . FALSE

    NAME            shift and go to state 19
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14

    expression                     shift and go to state 46

state 21

    (28) expression -> expression MINUS . expression
    (23) expression -> . NAME
    (25) expression -> . NAME PLUSEQ expression
    (26) expression -> . NAME PLUSPLUS
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression EQEQ expression
    (32) expression -> . expression DIF expression
    (33) expression -> . expression LESSEQ expression
    (34) expression -> . expression GREATEQ expression
    (35) expression -> . expression AND expression
    (36) expression -> . expression EQUAL expression
    (37) expression -> . expression LESSTHAN expression
    (38) expression -> . expression BIGGERTHAN expression
    (39) expression -> . expression MODULO expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . TRUE
    (44) expression -> . FALSE

    NAME            shift and go to state 19
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14

    expression                     shift and go to state 47

state 22

    (29) expression -> expression TIMES . expression
    (23) expression -> . NAME
    (25) expression -> . NAME PLUSEQ expression
    (26) expression -> . NAME PLUSPLUS
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression EQEQ expression
    (32) expression -> . expression DIF expression
    (33) expression -> . expression LESSEQ expression
    (34) expression -> . expression GREATEQ expression
    (35) expression -> . expression AND expression
    (36) expression -> . expression EQUAL expression
    (37) expression -> . expression LESSTHAN expression
    (38) expression -> . expression BIGGERTHAN expression
    (39) expression -> . expression MODULO expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . TRUE
    (44) expression -> . FALSE

    NAME            shift and go to state 19
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14

    expression                     shift and go to state 48

state 23

    (30) expression -> expression OR . expression
    (23) expression -> . NAME
    (25) expression -> . NAME PLUSEQ expression
    (26) expression -> . NAME PLUSPLUS
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression EQEQ expression
    (32) expression -> . expression DIF expression
    (33) expression -> . expression LESSEQ expression
    (34) expression -> . expression GREATEQ expression
    (35) expression -> . expression AND expression
    (36) expression -> . expression EQUAL expression
    (37) expression -> . expression LESSTHAN expression
    (38) expression -> . expression BIGGERTHAN expression
    (39) expression -> . expression MODULO expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . TRUE
    (44) expression -> . FALSE

    NAME            shift and go to state 19
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14

    expression                     shift and go to state 49

state 24

    (31) expression -> expression EQEQ . expression
    (23) expression -> . NAME
    (25) expression -> . NAME PLUSEQ expression
    (26) expression -> . NAME PLUSPLUS
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression EQEQ expression
    (32) expression -> . expression DIF expression
    (33) expression -> . expression LESSEQ expression
    (34) expression -> . expression GREATEQ expression
    (35) expression -> . expression AND expression
    (36) expression -> . expression EQUAL expression
    (37) expression -> . expression LESSTHAN expression
    (38) expression -> . expression BIGGERTHAN expression
    (39) expression -> . expression MODULO expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . TRUE
    (44) expression -> . FALSE

    NAME            shift and go to state 19
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14

    expression                     shift and go to state 50

state 25

    (32) expression -> expression DIF . expression
    (23) expression -> . NAME
    (25) expression -> . NAME PLUSEQ expression
    (26) expression -> . NAME PLUSPLUS
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression EQEQ expression
    (32) expression -> . expression DIF expression
    (33) expression -> . expression LESSEQ expression
    (34) expression -> . expression GREATEQ expression
    (35) expression -> . expression AND expression
    (36) expression -> . expression EQUAL expression
    (37) expression -> . expression LESSTHAN expression
    (38) expression -> . expression BIGGERTHAN expression
    (39) expression -> . expression MODULO expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . TRUE
    (44) expression -> . FALSE

    NAME            shift and go to state 19
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14

    expression                     shift and go to state 51

state 26

    (33) expression -> expression LESSEQ . expression
    (23) expression -> . NAME
    (25) expression -> . NAME PLUSEQ expression
    (26) expression -> . NAME PLUSPLUS
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression EQEQ expression
    (32) expression -> . expression DIF expression
    (33) expression -> . expression LESSEQ expression
    (34) expression -> . expression GREATEQ expression
    (35) expression -> . expression AND expression
    (36) expression -> . expression EQUAL expression
    (37) expression -> . expression LESSTHAN expression
    (38) expression -> . expression BIGGERTHAN expression
    (39) expression -> . expression MODULO expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . TRUE
    (44) expression -> . FALSE

    NAME            shift and go to state 19
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14

    expression                     shift and go to state 52

state 27

    (34) expression -> expression GREATEQ . expression
    (23) expression -> . NAME
    (25) expression -> . NAME PLUSEQ expression
    (26) expression -> . NAME PLUSPLUS
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression EQEQ expression
    (32) expression -> . expression DIF expression
    (33) expression -> . expression LESSEQ expression
    (34) expression -> . expression GREATEQ expression
    (35) expression -> . expression AND expression
    (36) expression -> . expression EQUAL expression
    (37) expression -> . expression LESSTHAN expression
    (38) expression -> . expression BIGGERTHAN expression
    (39) expression -> . expression MODULO expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . TRUE
    (44) expression -> . FALSE

    NAME            shift and go to state 19
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14

    expression                     shift and go to state 53

state 28

    (35) expression -> expression AND . expression
    (23) expression -> . NAME
    (25) expression -> . NAME PLUSEQ expression
    (26) expression -> . NAME PLUSPLUS
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression EQEQ expression
    (32) expression -> . expression DIF expression
    (33) expression -> . expression LESSEQ expression
    (34) expression -> . expression GREATEQ expression
    (35) expression -> . expression AND expression
    (36) expression -> . expression EQUAL expression
    (37) expression -> . expression LESSTHAN expression
    (38) expression -> . expression BIGGERTHAN expression
    (39) expression -> . expression MODULO expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . TRUE
    (44) expression -> . FALSE

    NAME            shift and go to state 19
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14

    expression                     shift and go to state 54

state 29
